tests/snapshots/multiline__multiline_no_sort@002.snap
---
source: tests/multiline.rs
description: "input: items [\"c1\\\\nc2\", \"a1\\\\na2\", \"b1\\\\nb2\"]\noptions: --multiline --no-sort\nafter:\n  @char 'a'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> a1                                                                            "
"  a2                                                                            "
"  1/3                                                                        0/0"
"> a                                                                             "
cursor: (24, 4)
