tests/snapshots/multiline__multiline_nth@002.snap
---
source: tests/multiline.rs
description: "input: items [\"aaa bbb\\\\nccc ddd\", \"eee fff\\\\nggg hhh\",]\noptions: --multiline --nth 2 --delimiter  \nafter:\n  @char 'b'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> aaa bbb                                                                       "
"  ccc ddd                                                                       "
"  1/2                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
