tests/snapshots/multiline__multiline_nth@003.snap
---
source: tests/multiline.rs
description: "input: items [\"aaa bbb\\\\nccc ddd\", \"eee fff\\\\nggg hhh\",]\noptions: --multiline --nth 2 --delimiter  \nafter:\n  @ctrl 'w'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  eee fff                                                                       "
"  ggg hhh                                                                       "
"> aaa bbb                                                                       "
"  ccc ddd                                                                       "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
