tests/snapshots/multiline__multiline_nth@004.snap
---
source: tests/multiline.rs
description: "input: items [\"aaa bbb\\\\nccc ddd\", \"eee fff\\\\nggg hhh\",]\noptions: --multiline --nth 2 --delimiter  \nafter:\n  @char 'f'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> eee fff                                                                       "
"  ggg hhh                                                                       "
"  1/2                                                                        0/0"
"> f                                                                             "
cursor: (24, 4)
