tests/snapshots/multiline__multiline_pre_select_n@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a1\\\\na2\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline -m --pre-select-n 2"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
" >b1                                                                            "
"  b2                                                                            "
">>a1                                                                            "
"  a2                                                                            "
"  3/3 [2]                                                                    0/0"
">                                                                               "
cursor: (24, 3)
