tests/snapshots/multiline__multiline_pre_select_pat@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"match1\\\\nmatch2\", \"b\"]\noptions: --multiline -m --pre-select-pat match"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
" >match1                                                                        "
"  match2                                                                        "
"> a                                                                             "
"  3/3 [1]                                                                    0/0"
">                                                                               "
cursor: (24, 3)
