tests/snapshots/multiline__multiline_read0@002.snap
---
source: tests/multiline.rs
description: "input: cmd \"printf 'a\\\\0b1\\\\nb2\\\\0c\\\\0'\"\noptions: --read0 --multiline\nafter:\n  @key Up"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"> b1                                                                            "
"  b2                                                                            "
"  a                                                                             "
"  3/3                                                                        1/0"
">                                                                               "
cursor: (24, 3)
