tests/snapshots/multiline__multiline_read0_three_lines@001.snap
---
source: tests/multiline.rs
description: "input: cmd \"printf 'x\\\\0one\\\\ntwo\\\\nthree\\\\0y\\\\0'\"\noptions: --read0 --multiline"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  y                                                                             "
"  one                                                                           "
"  two                                                                           "
"  three                                                                         "
"> x                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
