tests/snapshots/multiline__multiline_search_and_navigate@001.snap
---
source: tests/multiline.rs
description: "input: items [\"aa\\\\nbb\", \"cc\\\\ndd\", \"aa\\\\ncc\"]\noptions: --multiline -q aa"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  aa                                                                            "
"  cc                                                                            "
"> aa                                                                            "
"  bb                                                                            "
"  2/3                                                                        0/0"
"> aa                                                                            "
cursor: (24, 5)
